// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tab > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-0:focus-visible {
  outline: auto;
}

.emotion-0[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-0[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover,
.emotion-0[aria-disabled='false']:not(:disabled):focus,
.emotion-0[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-0[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-0[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.emotion-0[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.emotion-0[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.emotion-0[aria-disabled='true'],
.emotion-0:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="emotion-0 emotion-1"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with counter, badge and subtitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-0:focus-visible {
  outline: auto;
}

.emotion-0[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-0[aria-selected='true'] .emotion-13 {
  color: #641cb3;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover,
.emotion-0[aria-disabled='false']:not(:disabled):focus,
.emotion-0[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-7,
.emotion-0[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-7,
.emotion-0[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-7 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-13,
.emotion-0[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-13,
.emotion-0[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-13 {
  color: #641cb3;
}

.emotion-0[aria-disabled='true'],
.emotion-0:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  padding: 0 0.5rem;
  margin-left: 0.5rem;
}

.emotion-8 {
  margin-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="emotion-0 emotion-1"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <span
            class="emotion-6 emotion-7 styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jyd styles_sentiment_neutral__1yf71jya styles_undefined_compound_6__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            style="--qabug41: nowrap;"
          >
            1
          </span>
          <span
            class="emotion-8 emotion-9"
          >
            badge
          </span>
        </div>
        <div
          class="emotion-10 emotion-3"
        >
          <span
            class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
          >
            subtitle
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with subtitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-0:focus-visible {
  outline: auto;
}

.emotion-0[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-0[aria-selected='true'] .emotion-9 {
  color: #641cb3;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover,
.emotion-0[aria-disabled='false']:not(:disabled):focus,
.emotion-0[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.emotion-0[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.emotion-0[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.emotion-0[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .emotion-9,
.emotion-0[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .emotion-9,
.emotion-0[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .emotion-9 {
  color: #641cb3;
}

.emotion-0[aria-disabled='true'],
.emotion-0:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="emotion-0 emotion-1"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        />
        <div
          class="emotion-6 emotion-3"
        >
          <span
            class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
          >
            test
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
